<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/cardMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/white"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="vertical">
            <!--android:layout_margin="30dp"-->

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tvName"
                fontPath="fonts/PTSans-Regular.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:visibility="gone" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tvRegistration"
                fontPath="fonts/PT_Sans-Web-Bold.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/sign_in"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <android.support.v7.widget.CardView
                android:id="@+id/flName"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="4dp">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/etName"
                    fontPath="fonts/PTSans-Regular.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:hint="@string/you_name"
                    android:imeOptions="actionNext"
                    android:inputType="textCapSentences"
                    android:padding="18dp"
                    android:textSize="16sp" />

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:id="@+id/flPhone"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="4dp">

                <EditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:padding="18dp"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/flEnterSmsCode"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="16dp"
                android:visibility="gone"
                app:cardCornerRadius="4dp">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/etSmsCode"
                    fontPath="fonts/PTSans-Regular.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:elevation="16dp"
                    android:gravity="center"
                    android:hint="@string/code_from_sms"
                    android:imeOptions="actionGo"
                    android:padding="18dp"
                    android:textSize="16sp" />

                <android.support.v7.widget.AppCompatImageView xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/icSuccessEnterCode"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginRight="16dp"
                    android:scaleType="center"
                    android:visibility="gone"
                    app:srcCompat="@drawable/ic_success_enter_code" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/etSendCode"
                fontPath="fonts/PTSans-Regular.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/transparent"
                android:editable="false"
                android:gravity="center"
                android:text="@string/resend_code"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp"
                android:visibility="gone" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnNext"
                fontPath="fonts/PTSans-Regular.ttf"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/yellow_background"
                android:elevation="16dp"
                android:text="@string/next"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            fontPath="fonts/PTSans-Regular.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/registration_for"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    fontPath="fonts/PTSans-Regular.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="@string/registration_for_car_services"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <View
                    android:layout_width="0.5dp"
                    android:layout_height="match_parent"
                    />

                <android.support.v7.widget.AppCompatTextView
                    fontPath="fonts/PTSans-Regular.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="@string/registration_for_car_wash"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</FrameLayout>