<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/cardMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="40dp"
        android:background="@android:color/white"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                fontPath="fonts/PT_Sans-Web-Bold.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Авторизация"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                tools:ignore="MissingPrefix" />


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="30dp"
                app:cardCornerRadius="4dp">

                <EditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:padding="18dp"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="4dp">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/etPassword"
                    fontPath="fonts/PTSans-Regular.ttf"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:hint="@string/password"
                    android:imeOptions="actionGo"
                    android:inputType="textPassword"
                    android:padding="18dp"
                    android:textSize="16sp" />

            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/btnNext"
                fontPath="fonts/PTSans-Regular.ttf"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/yellow_background"
                android:text="@string/come_in"
                android:textAllCaps="false"
                android:textSize="20sp"
                tools:ignore="MissingPrefix" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="32dp">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tvRegistration"
                    fontPath="fonts/PT_Sans-Web-Regular.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in_underline"
                    android:textSize="16sp"
                    tools:ignore="MissingPrefix" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tvForgetPassword"
                    fontPath="fonts/PT_Sans-Web-Regular.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/forgot_password_underline"
                    android:textSize="16sp"
                    tools:ignore="MissingPrefix" />

            </FrameLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</FrameLayout>