<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent">

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="30dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/restore_password"
                android:gravity="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                fontPath="fonts/PTSans-Bold.ttf"/>


            <android.support.v7.widget.CardView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:cardCornerRadius="4dp"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp">

                <EditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:padding="18dp"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:id="@+id/flEnterSmsCode"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="4dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp">

                <android.support.v7.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/code_from_sms"
                    android:id="@+id/etSmsCode"
                    android:textSize="16sp"
                    android:imeOptions="actionNext"
                    android:gravity="center"
                    android:padding="18dp"
                    android:background="@android:color/transparent"
                    fontPath="fonts/PTSans-Regular.ttf"/>

                <android.support.v7.widget.AppCompatImageView xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:id="@+id/icSuccessEnterCode"
                    android:layout_gravity="right|center_vertical"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    app:srcCompat="@drawable/ic_success_enter_code"
                    android:layout_marginRight="16dp"
                    android:scaleType="center"
                    android:visibility="gone"/>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="4dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp">

                <android.support.v7.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etPassword"
                    android:gravity="center"
                    android:hint="@string/new_password"
                    android:imeOptions="actionGo"
                    android:textSize="16sp"
                    android:padding="18dp"
                    android:background="@android:color/transparent"
                    fontPath="fonts/PTSans-Regular.ttf"/>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="16dp"
                android:id="@+id/btnNext"
                android:textColor="@android:color/black"
                android:text="@string/get_code"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/yellow_background"
                fontPath="fonts/PTSans-Regular.ttf"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:id="@+id/progressBar" />

</FrameLayout>